@@ -1,7 +1,6 @@
 package edu.craptocraft.stockx.criteria;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import edu.craptocraft.stockx.item.Offer;
 import edu.craptocraft.stockx.item.Item;
@@ -15,7 +14,7 @@ public class Asks implements Criteria {
     @Override
     public List<Offer> checkCriteria(Item sneaker) {
 
-        return sneaker.offers().stream().filter(a -> a instanceof Ask).collect(Collectors.toList());
+        return sneaker.offers().stream().filter(a -> a instanceof Ask).toList();
 
     }
 
